examples/m17/invalid-and-incomplete-proof/unterminated-string.athena
system UnterminatedString {
  device PLC1 {
    model "unterminated
  }
}
